<resources>
    <string name="app_name">Morse translator</string>
    <string name="text_main">Your text here ...</string>
    <string name="buttonM">Encode</string>
    <string name="buttonT">Decode</string>
    <string name="buttonkopiraj">Copy</string>
    <string name="prosnja">Please insert text!</string>
    <string name="kopirano">Copied to Clipboard</string>
    <string name="prazno">Empty</string>
    <string name="menjaj">Switch</string>
    <string name="vsebina">Data</string>
    <string name="text_second"></string>
    <string name="nic" translatable="false"></string>
    <string name="x">X</string>
    <string name="pomoc">To write in Morse you must write in dots and dashes ( . and - ). If you would like to finish one letter you hit \"Space\" once and continue. To finish a word hit \"Space\", followed by two slashes ( // ) and hit \"Space\" one more time. (Example: .- // -. . -) Without hitting a \"Space\" the translation will be faulty.</string>

</resources>