<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ABABC9E1"
    android:importantForAccessibility="yes"

    android:padding="20dp"
    android:textAlignment="center"
    tools:context=".MainActivity">


    <ImageButton
        android:id="@+id/buttonM"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/nic"
        android:scaleType="fitCenter"
        android:scrollbars="vertical"
        android:src="@drawable/av__"
        android:text="@string/buttonM"
        android:visibility="visible"
        app:backgroundTint="#2862C8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theMainText" />

    <Button
        android:id="@+id/buttonkopiraj"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:text="@string/buttonkopiraj"
        android:visibility="visible"
        app:backgroundTint="#578FE4"
        app:icon="?attr/actionModeCopyDrawable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_menjaj" />

    <EditText
        android:id="@+id/theMainText"
        android:layout_width="247dp"
        android:layout_height="103dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="75dp"
        android:autofillHints=""
        android:background="#8A94C3D5"
        android:ems="10"
        android:hint="@string/text_main"
        android:inputType="textLongMessage|text"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/text_main" />

    <Button
        android:id="@+id/buttonbrisi"
        android:layout_width="54dp"
        android:layout_height="61dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="4dp"
        android:layout_weight="1"
        android:focusable="false"
        android:fontFamily="sans-serif-black"
        android:text="@string/x"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:backgroundTint="#ED5959"
        app:cornerRadius="60dp"
        app:iconPadding="0dp"
        app:iconTint="@color/white"
        app:iconTintMode="src_atop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_help" />


    <ScrollView
        android:id="@+id/scrollMain"
        android:layout_width="337dp"
        android:layout_height="422dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#8A94C3D5"
        android:isScrollContainer="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonkopiraj"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-black"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:layout_margin="16dp"
                tools:text="@string/text_second" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_menjaj"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:focusable="false"
        android:text="@string/menjaj"
        app:backgroundTint="#255FC5"
        app:icon="@android:drawable/stat_notify_sync"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theMainText"
        tools:text="@string/menjaj" />

    <ImageButton
        android:id="@+id/buttonT"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/nic"
        android:scaleType="fitCenter"
        android:src="@drawable/__va"
        android:text="@string/buttonT"
        app:backgroundTint="#3A80FA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonM" />

    <!--suppress AndroidDomInspection -->

    <ImageButton
        android:id="@+id/button_help"
        android:layout_width="85dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/nic"
        android:cropToPadding="true"
        android:scaleType="fitCenter"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#729BCD"
        app:cornerRadius="43dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/znakigumb" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="333dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:background="#5C97B5CD"
        android:fontFamily="serif"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#595454"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_helpMain"
        android:layout_width="43dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="?"
        android:textSize="30sp"
        app:backgroundTint="#729BCD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="Made by Dejan Jarc, 2021. Project Morse Translator."
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollMain"
        app:layout_constraintVertical_bias="0.578" />


</androidx.constraintlayout.widget.ConstraintLayout>